Changelog for GoodNews

- removed ContentCollectionSnippet output if collection is empty


GoodNews 1.3.5-pl (2014-12-10)
--------------------------------------------------
- added ability to click on newsletter title to edit the newsletter
- added a switch above Newsletters grid to quickly activate/deactivate send-processes
- [#32] Add back an indicator for displaying if sending processes are activated/deactivated in settings
- fixed a problem in System settings when Admin or Editor group names have leading or trailing spaces
- fixed a bug with slider value displays in GoodNews - System settings
- [#30] added indicator in GoodNews - System Checks for requirement of PHP versions > 5.3.0
- fixed a bug in resource rendering (this was a tricky one!)


GoodNews 1.3.4-pl (2014-12-03)
--------------------------------------------------
- fixed a problem where Resource Collections aren't restored correctly from database
- added container filter dropdown in Resource Collections grid (better user experience)
- removed grouping by container in Resource Collections grid
- added PHP 5.3 (or later) requirement to readme.txt
- again fixed another small bug in how cron security keys are checked :)
- fixed a problem where Resource Collections are empty on first load (no Collections array available in mailing_meta)


GoodNews 1.3.3-pl (2014-11-16)
--------------------------------------------------
- fixed an issue with checkboxes causing text-parsing problems when using the "required" validator
- [#5] Render warning message to GoodNews forms if Snippets are mis-configured
- fixed a few PHP warnings in goodnewssubscriptioncontroller.class.php
- when updating the subscription profile: update form fields with new values when reloadOnSuccess = false
- [#29] Frontend: groups checkboxes output is falsely rendered inside html form fieldset for each single group
- [#28] Frontend: Subscription snippet - crashes during validation if email field is empty