@@ -1,0 +1,10 @@
+<table border="0" cellpadding="20" cellspacing="0" width="100%">
+    <tr>
+        <td valign="top">
+            <div>
+                [[+output]]
+            </div>
+        </td>
+    </tr>
+</table>
+
